--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: run phpipam-action
-        uses: codeaffen/phpipam-action@latest
+        uses: codeaffen/phpipam-action@v0.0.1
