--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
     "name": "phpipam-action",
     "version": "0.0.1",
     "description": "phpipam-action",
-    "main": "index.js",
+    "main": "main.js",
     "keywords": [
         "phpipam",
         "github-action"
     ],
     "author": "",
     "license": "ISC",
-    "devDependencies": {
+    "dependencies": {
         "@actions/core": "^1.6.0",
         "@actions/github": "^5.0.0",
         "docker-compose": "^0.23.14",
