--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ bower_components
 build/Release
 
 # Dependency directories
+node_modules/*
+node_modules/.bin
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
