--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
         "github-action"
     ],
     "scripts": {
-        "build": "ncc build main.js --license LICENSE"
+        "lint": "eslint .",
+        "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
+        "test": "true || jest",
+        "all": "npm run lint && npm run prepare && npm run test"
     },
     "author": "",
     "license": "GPLv3",
@@ -18,5 +21,10 @@
         "docker-compose": "^0.23.14",
         "fs": "^0.0.1-security",
         "js-yaml": "^4.1.0"
+    },
+    "devDependencies": {
+        "@vercel/ncc": "^0.31.1",
+        "eslint": "^8.0.0",
+        "jest": "^27.2.5"
     }
 }
