Enable parameter handling
With this commit we enabled handling of action input parameters. From
now you can provide the following parameters:

* ipam_version
* ipam_database_host
* ipam_database_user
* ipam_database_pass
* ipam_database_name
* database_root_password

All of these parameters are optional and default values will be
guarantee a working environment anyways.

We also extend our existing tests by providing inputs by environment
variables and test the newly configured database as well.
Finally we demonstrate in the test workflow the ability to use matrix
builds.

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,10 @@
 name: 'phpIPAM Action'
 description: 'Spin up a phpIPAM instance'
 inputs:
+  ipam_version:
+    description: 'phpIPAM version to install'
+    required: false
+    default: 'latest'
   ipam_database_host:
     description: 'database host phpipam connects to'
     required: false
