--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,14 @@ on:
   - push
   - pull_request
 
+env:
+  IPAM_VERSION: '1.4x'
+  IPAM_DATABASE_HOST: 'database'
+  IPAM_DATABASE_USER: 'ipamuser'
+  IPAM_DATABASE_PASS: 'ipampass'
+  IPAM_DATABASE_NAME: 'ipamdb'
+  DATABASE_ROOT_PASS: 'v3ryS3cureP4ssw0rd'
+
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -10,6 +18,29 @@ jobs:
       - uses: actions/checkout@v2
       - name: run phpipam-action
         uses: ./ # use action in the root directory
-      - name: "Test phpipam api"
+        with:
+          ipam_version: ${{ env.IPAM_VERSION }}
+          ipam_database_host: ${{ env.IPAM_DATABASE_HOST }}
+          ipam_database_user: ${{ env.IPAM_DATABASE_USER }}
+          ipam_database_pass: ${{ env.IPAM_DATABASE_PASS }}
+          ipam_database_name: ${{ env.IPAM_DATABASE_NAME }}
+          database_root_password: ${{ env.DATABASE_ROOT_PASS }}
+      - name: "Test phpipam api and database"
         run: |
           curl -k --user Admin:ipamadmin -X POST https://localhost/api/ansible/user/
+          mysql -h 127.0.01 -u ${{ env.IPAM_DATABASE_USER }} -p${{ env.IPAM_DATABASE_PASS }} ${{ env.IPAM_DATABASE_NAME }} --execute="SHOW TABLES"
+  matrix_test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        phpipam: ['1.4x','1.5x']
+    steps:
+      - uses: actions/checkout@v2
+      - name: run phpipam-action
+        uses: ./ # use action in the root directory
+        with:
+          ipam_version: ${{ matrix.phpipam }}
+      - name: "Test phpipam api and database"
+        run: |
+          curl -k --user Admin:ipamadmin -X POST https://localhost/api/ansible/user/
+          mysql -h 127.0.01 -u ${{ env.IPAM_DATABASE_USER }} -p${{ env.IPAM_DATABASE_PASS }} ${{ env.IPAM_DATABASE_NAME }} --execute="SHOW TABLES"
