Implement a saver way of running container commands
- Update compose file to allow webserver is running on a selected port for
  local testing, also in non-priveleged environments
- Try catching exception in running container cmds
- Update matrix versions
- Split api and database test into separate steps
- Remove deprecated eslint comments
- Update build version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,14 +33,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        phpipam: ['1.4x','1.5x']
+        phpipam: ['v1.4x','v1.5x']
     steps:
       - uses: actions/checkout@v2
-      - name: run phpipam-action
+      - name: Run phpipam-action
         uses: ./ # use action in the root directory
         with:
           ipam_version: ${{ matrix.phpipam }}
-      - name: "Test phpipam api and database"
+      - name: "Test phpipam api"
         run: |
           curl -k --user Admin:ipamadmin -X POST https://localhost/api/ansible/user/
+      - name: "Test database"
+        run: |
           mysql -h 127.0.01 -u ${{ env.IPAM_DATABASE_USER }} -p${{ env.IPAM_DATABASE_PASS }} ${{ env.IPAM_DATABASE_NAME }} --execute="SHOW TABLES"
